--- a/config/publishers/s3.md
+++ b/config/publishers/s3.md
@@ -14,7 +14,7 @@ By default, all files are positioned at the following key:\
 \
 `${config.folder || appVersion}/${artifactName}`
 
-Configuration options are documented in [`PublisherS3Config`](https://js.electronforge.io/publisher/s3/interfaces/publishers3config.html).
+Configuration options are documented in [`PublisherS3Config`](https://js.electronforge.io/interfaces/_electron_forge_publisher_s3.PublisherS3Config.html).
 
 ### Authentication
 
