docs: improve examples in publishers

--- a/config/publishers/s3.md
+++ b/config/publishers/s3.md
@@ -22,13 +22,17 @@ It is recommended to follow the [Amazon AWS guide](https://docs.aws.amazon.com/s
 
 ### Usage
 
-```javascript
-// Within the publishers array:
-{
-  name: '@electron-forge/publisher-s3',
-  config: {
-    bucket: 'my-bucket',
-    public: true
-  }
+```javascript title=forge.config.js
+module.exports = {
+  // ...
+  publishers: [
+    {
+      name: '@electron-forge/publisher-s3',
+      config: {
+        bucket: 'my-bucket',
+        public: true
+      }
+    }
+  ]
 }
 ```
