--- a/config/publishers/s3.md
+++ b/config/publishers/s3.md
@@ -22,7 +22,8 @@ It is recommended to follow the [Amazon AWS guide](https://docs.aws.amazon.com/s
 
 ### Usage
 
-```javascript title=forge.config.js
+{% code title="forge.config.js" %}
+```javascript
 module.exports = {
   // ...
   publishers: [
@@ -36,3 +37,4 @@ module.exports = {
   ]
 }
 ```
+{% endcode %}
