--- a/config/publishers/s3.md
+++ b/config/publishers/s3.md
@@ -12,31 +12,33 @@ It is recommended to follow the [Amazon AWS guide](https://docs.aws.amazon.com/s
 
 ## Usage
 
-Configuration options are documented in [`PublisherS3Config`](https://js.electronforge.io/interfaces/\_electron\_forge\_publisher\_s3.PublisherS3Config.html).
+Configuration options are documented in [`PublisherS3Config`](https://js.electronforge.io/interfaces/_electron_forge_publisher_s3.PublisherS3Config.html).
 
 {% code title="forge.config.js" %}
+
 ```javascript
 module.exports = {
   // ...
   publishers: [
     {
-      name: '@electron-forge/publisher-s3',
+      name: "@electron-forge/publisher-s3",
       config: {
-        bucket: 'my-bucket',
-        public: true
-      }
-    }
-  ]
-}
+        bucket: "my-bucket",
+        public: true,
+      },
+    },
+  ],
+};
 ```
+
 {% endcode %}
 
 ### Key management
 
 By default, the S3 publisher will upload its objects to the`PREFIX/NAME` key, where:
 
-* `PREFIX` is the value of the `config.folder` option (defaults to your package.json version).
-* `NAME` is the file name of the artifact you are publishing.
+- `PREFIX` is the value of the `config.folder` option (defaults to your package.json version).
+- `NAME` is the file name of the artifact you are publishing.
 
 {% hint style="warning" %}
 If you run the Publish command multiple times on the same platform for the same version (e.g. simultaneously publishing `ia32` and `x64` Windows artifacts), your uploads can get overwritten in the S3 bucket.
@@ -44,6 +46,7 @@ If you run the Publish command multiple times on the same platform for the same 
 To avoid this problem, you can use the `keyResolver` option to generate the S3 key programmatically.
 
 {% code title="forge.config.js" %}
+
 ```javascript
 {
   name: '@electron-forge/publisher-s3',
@@ -56,9 +59,8 @@ To avoid this problem, you can use the `keyResolver` option to generate the S3 k
   }
 }
 ```
+
 {% endcode %}
 {% endhint %}
-
-
 
 \
