--- a/config/publishers/s3.md
+++ b/config/publishers/s3.md
@@ -27,7 +27,7 @@ module.exports = {
       }
     }
   ]
-}
+};
 ```
 {% endcode %}
 
@@ -49,8 +49,8 @@ To avoid this problem, you can use the `keyResolver` option to generate the S3 k
   name: '@electron-forge/publisher-s3',
   config: {
     // ...
-    keyResolver: (fileName: string, platform: string, arch: string) => {
-      return `some-prefix/${platform}/${arch}/filename`;
+    keyResolver: (fileName, platform, arch) => {
+      return `some-prefix/${platform}/${arch}/filename`
     }
     // ...
   }
@@ -58,7 +58,3 @@ To avoid this problem, you can use the `keyResolver` option to generate the S3 k
 ```
 {% endcode %}
 {% endhint %}
-
-
-
-\
