--- a/config/publishers/s3.md
+++ b/config/publishers/s3.md
@@ -27,7 +27,7 @@ module.exports = {
       }
     }
   ]
-}
+};
 ```
 {% endcode %}
 
@@ -78,7 +78,7 @@ module.exports = {
         // Note that we must provide this S3 URL here
         // in order to support smooth version transitions
         // especially when using a CDN to front your updates
-        macUpdateManifestBaseUrl: 'https://my-bucket.s3.amazonaws.com/my-app-updates/darwin/${arch}/RELEASES.json'
+        macUpdateManifestBaseUrl: `https://my-bucket.s3.amazonaws.com/my-app-updates/darwin/${arch}/RELEASES.json`
       })
     },
     {
@@ -86,7 +86,7 @@ module.exports = {
       config: (arch) => ({
         // Note that we must provide this S3 URL here
         // in order to generate delta updates
-        remoteReleases: `https://my-bucket.s3.amazonaws.com/my-app-updates/win32/${arch}`,
+        remoteReleases: `https://my-bucket.s3.amazonaws.com/my-app-updates/win32/${arch}`
       })
     }
   ],
@@ -95,11 +95,11 @@ module.exports = {
       name: '@electron-forge/publisher-s3',
       config: {
         bucket: 'my-bucket',
-        public: true,
+        public: true
       }
     }
   ]
-}
+};
 ```
 {% endcode %}
 
@@ -112,7 +112,7 @@ const { updateElectronApp, UpdateSourceType } = require('update-electron-app');
 updateElectronApp({
   updateSource: {
     type: UpdateSourceType.StaticStorage,
-    baseUrl: `https://my-bucket.s3.amazonaws.com/my-app-updates/${process.platform}/${process.arch}`,
+    baseUrl: `https://my-bucket.s3.amazonaws.com/my-app-updates/${process.platform}/${process.arch}`
   }
 });
 ```
