Update s3 maker-zip example

--- a/config/publishers/s3.md
+++ b/config/publishers/s3.md
@@ -78,7 +78,7 @@ module.exports = {
         // Note that we must provide this S3 URL here
         // in order to support smooth version transitions
         // especially when using a CDN to front your updates
-        macUpdateManifestBaseUrl: `https://my-bucket.s3.amazonaws.com/my-app-updates/darwin/${arch}/RELEASES.json`
+        macUpdateManifestBaseUrl: `https://my-bucket.s3.amazonaws.com/my-app-updates/darwin/${arch}`
       })
     },
     {
