--- a/config/publishers/s3.md
+++ b/config/publishers/s3.md
@@ -52,7 +52,7 @@ To avoid this problem, you can use the `keyResolver` option to generate the S3 k
   config: {
     // ...
     keyResolver: (fileName, platform, arch) => {
-      return `some-prefix/${platform}/${arch}/filename`
+      return `some-prefix/${platform}/${arch}/${filename}`
     }
     // ...
   }
